--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <meta name="format-detection" content="telephone=no">
   <meta name="msapplication-tap-highlight" content="no">
   <title>My App</title>
-  <link rel="stylesheet" href="libs/framework7/css/framework7.bundle.min.css">
+  <link rel="stylesheet" href="libs/framework7/css/framework7.md.min.css">
   <link rel="stylesheet" href="css/icons.css">
   <link rel="stylesheet" href="css/app.css">
 </head>
